--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+qt-gstreamer (0.10.1-2.1) unstable; urgency=low
+
+  * Non-Maintainer Upload.
+  
+  * patches/boost1.48.patch: New.  Work around moc limitation.  Closes:
+    #653796.
+
+ -- Steve M. Robbins <smr@debian.org>  Sat, 28 Jan 2012 05:41:39 -0600
+
 qt-gstreamer (0.10.1-2) unstable; urgency=low
 
   * Import patch from upstream to fix FTBFS - disable building
