Remove patches/boost1.48.patch: No longer needed, the fix is upstream.

--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ qt-gstreamer (0.10.2-1) unstable; urgency=low
 
   * New upstream release.
     - Individual glib headers are no longer used (Closes: #665602)
+  * Remove patches/boost1.48.patch: No longer needed, the fix is upstream.
 
  -- George Kiagiadakis <kiagiadakis.george@gmail.com>  Sat, 05 May 2012 13:34:04 +0300
 
