--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,10 @@ qt-gstreamer (0.10.2-1) unstable; urgency=low
   * New upstream release.
     - Individual glib headers are no longer used (Closes: #665602)
   * Remove patches/boost1.48.patch: No longer needed, the fix is upstream.
+  * Bump versions of (build-)dependencies:
+    - cmake >= 2.8.6
+    - qt >= 4.7
+    - gstreamer >= 0.10.33
 
  -- George Kiagiadakis <kiagiadakis.george@gmail.com>  Sat, 05 May 2012 13:34:04 +0300
 
