Update symbols files.

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ qt-gstreamer (0.10.2-1) unstable; urgency=low
     - Bump debian/compat to 9.
     - Adjust packaging to install libraries and plugins
       to the mutliarch location.
+  * Update symbols files.
 
  -- George Kiagiadakis <kiagiadakis.george@gmail.com>  Sat, 05 May 2012 13:34:04 +0300
 
