--- a/debian/changelog
+++ b/debian/changelog
@@ -2,7 +2,7 @@ qt-gstreamer (0.10.2-1) unstable; urgency=low
 
   * New upstream release.
     - Individual glib headers are no longer used (Closes: #665602)
-  * Remove patches/boost1.48.patch: No longer needed, the fix is upstream.
+  * Remove all patches: No longer needed, the fixes are upstream.
   * Bump versions of (build-)dependencies:
     - cmake >= 2.8.6
     - qt >= 4.7
