--- a/debian/changelog
+++ b/debian/changelog
@@ -5,11 +5,11 @@ qt-gstreamer (0.10.2-1) unstable; urgency=low
   * Remove all patches: No longer needed, the fixes are upstream.
   * Bump versions of (build-)dependencies:
     - cmake >= 2.8.6
-    - qt >= 4.7
     - gstreamer >= 0.10.33
   * Convert to multiarch.
     - Bump debhelper dependency to version 9.
     - Bump debian/compat to 9.
+    - Bump Qt build-dep to version 4.8.1 (needed for QML mutliarch).
     - Add build-dep on dpkg-dev (>= 1.16.1~).
     - Adjust packaging to install libraries and plugins
       to the mutliarch location.
