--- a/debian/changelog
+++ b/debian/changelog
@@ -22,6 +22,7 @@ qt-gstreamer (0.10.2-1) unstable; urgency=low
     - Mention the new plugins in qtgstreamer-plugins' package descrption.
   * Update and convert debian/copyright to machine-readable format.
   * Bump standards-version to 3.9.3.
+  * Add build dependency on libqt4-opengl-dev for compiling the opengl bits.
 
  -- George Kiagiadakis <kiagiadakis.george@gmail.com>  Sat, 05 May 2012 13:34:04 +0300
 
