--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 qt-gstreamer (1.1.90-1) UNRELEASED; urgency=medium
 
   * Import upstream version 1.1.90
+  * Add watch file.
 
  -- Diane Trout <diane@ghic.org>  Tue, 01 Jul 2014 20:13:24 -0700
 
