--- a/debian/changelog
+++ b/debian/changelog
@@ -4,6 +4,7 @@ qt-gstreamer (1.1.90-1) UNRELEASED; urgency=medium
   * Add watch file.
   * Bump Standards-Version to 3.9.5. No changes needed.
   * Add myself to uploaders.
+  * Removed include_path_multiarch.patch build is multiarch compatible.
 
  -- Diane Trout <diane@ghic.org>  Tue, 01 Jul 2014 20:13:24 -0700
 
