--- a/debian/changelog
+++ b/debian/changelog
@@ -6,6 +6,7 @@ qt-gstreamer (1.1.90-1) UNRELEASED; urgency=medium
   * Add myself to uploaders.
   * Removed include_path_multiarch.patch build is multiarch compatible.
   * Update package names from 0.10 to 1.0 to reflect change in api version.
+  * Update symbols files.
 
  -- Diane Trout <diane@ghic.org>  Tue, 01 Jul 2014 20:13:24 -0700
 
