--- a/debian/changelog
+++ b/debian/changelog
@@ -8,6 +8,7 @@ qt-gstreamer (1.1.90-1) UNRELEASED; urgency=medium
   * Update package names from 0.10 to 1.0 to reflect change in api version.
   * Update symbols files.
   * Remove LIB_INSTALL_DIR setting from rules as its not used by cmake any more.
+  * Update path for qtgstreamer-dev cmake configuration files.
 
  -- Diane Trout <diane@ghic.org>  Tue, 01 Jul 2014 20:13:24 -0700
 
