--- a/debian/changelog
+++ b/debian/changelog
@@ -9,6 +9,7 @@ qt-gstreamer (1.1.90-1) UNRELEASED; urgency=medium
   * Update symbols files.
   * Remove LIB_INSTALL_DIR setting from rules as its not used by cmake any more.
   * Update path for qtgstreamer-dev cmake configuration files.
+  * Add Multi-Arch: same to qtgstreamer-dbg
 
  -- Diane Trout <diane@ghic.org>  Tue, 01 Jul 2014 20:13:24 -0700
 
