--- a/debian/changelog
+++ b/debian/changelog
@@ -11,6 +11,7 @@ qt-gstreamer (1.1.90-1) UNRELEASED; urgency=medium
   * Update path for qtgstreamer-dev cmake configuration files.
   * Add Multi-Arch: same to qtgstreamer-dbg
   * Link to debian provided jquery.
+  * Update libqtgstreamer for amd64 and i386
 
  -- Diane Trout <diane@ghic.org>  Tue, 01 Jul 2014 20:13:24 -0700
 
