Add dependency on pkg-kde-tools to use pkgkde-symbolshelper to manage symbols.

--- a/debian/changelog
+++ b/debian/changelog
@@ -12,6 +12,7 @@ qt-gstreamer (1.2.0-1) UNRELEASED; urgency=medium
   * Add Multi-Arch: same to qtgstreamer-dbg
   * Link to debian provided jquery.
   * Update libqtgstreamer for amd64 and i386
+  * Add dependency on pkg-kde-tools to use pkgkde-symbolshelper to manage symbols.
 
  -- Diane Trout <diane@ghic.org>  Tue, 01 Jul 2014 20:13:24 -0700
 
