--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+qt-gstreamer (1.2.0-2) UNRELEASED; urgency=medium
+
+  * Add disable-doxygen-timestamp.patch to help make package
+    build reproducably.
+
+ -- Diane Trout <diane@ghic.org>  Mon, 09 Mar 2015 21:38:06 -0700
+
 qt-gstreamer (1.2.0-1) experimental; urgency=medium
 
   * Import upstream version 1.2.0
