--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,7 @@ qt-gstreamer (1.2.0-2) UNRELEASED; urgency=medium
 
   * Add disable-doxygen-timestamp.patch to help make package
     build reproducably.
+  * Update symbols file, a few symbols are parameterized on amd64 and i386.
 
  -- Diane Trout <diane@ghic.org>  Mon, 09 Mar 2015 21:38:06 -0700
 
