--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-qt-gstreamer (1.2.0-2) UNRELEASED; urgency=medium
+qt-gstreamer (1.2.0-2) unstable; urgency=medium
 
   * Add disable-doxygen-timestamp.patch to help make package
     build reproducably.
@@ -16,7 +16,7 @@ qt-gstreamer (1.2.0-2) UNRELEASED; urgency=medium
   * Correctly build dbg packages for Qt4 and Qt5 packages.
   * Release to unstable after Jessie freeze finished.
 
- -- Diane Trout <diane@ghic.org>  Mon, 09 Mar 2015 21:38:06 -0700
+ -- Diane Trout <diane@ghic.org>  Wed, 29 Apr 2015 21:26:30 -0700
 
 qt-gstreamer (1.2.0-1) experimental; urgency=medium
 
