--- a/debian/changelog
+++ b/debian/changelog
@@ -3,6 +3,8 @@ qt-gstreamer (1.2.0-2ubuntu1) UNRELEASED; urgency=medium
   * Fix FTBFS because of latest gstreamer:
     - add find_gstconfig_properly.diff
     - add pkg-config to build depends (needed by the above patch)
+  * Workaround FTBFS with boost >= 1.57:
+    - add upstream_workaround_boost_ftbfs.diff
 
  -- José Manuel Santamaría Lema <panfaust@gmail.com>  Fri, 07 Aug 2015 21:47:07 +0200
 
