--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qt-gstreamer (1.2.0-3~) UNRELEASED; urgency=medium
+
+  * Team upload.
+
+ -- Maximiliano Curia <maxy@debian.org>  Wed, 12 Aug 2015 22:11:45 +0200
+
 qt-gstreamer (1.2.0-2) unstable; urgency=medium
 
   * Add disable-doxygen-timestamp.patch to help make package
