--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,8 @@
-qt-gstreamer (1.2.0-3~) UNRELEASED; urgency=medium
+qt-gstreamer (1.2.0-3) unstable; urgency=medium
 
   * Team upload.
 
- -- Maximiliano Curia <maxy@debian.org>  Wed, 12 Aug 2015 22:11:45 +0200
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 13 Aug 2015 11:38:00 +0200
 
 qt-gstreamer (1.2.0-2ubuntu3) UNRELEASED; urgency=medium
 
