--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+qt-gstreamer (1.2.0-3) unstable; urgency=medium
+
+  * Team upload.
+
+ -- Maximiliano Curia <maxy@debian.org>  Thu, 13 Aug 2015 11:38:00 +0200
+
 qt-gstreamer (1.2.0-2ubuntu3) UNRELEASED; urgency=medium
 
   * Fix FTBFS because of latest gstreamer:
